# uEDP

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Kconfig  README.md  uedp.py
docs/: arch-design.md  to-do.md  uedp-vs-freertos.md  uedp-vs-qpc.md  ueos-roadmap.md  user-manual.md
docs/qpc/: active-object-srs.md  event-delivery-srs.md  event-manage-srs.md  event-srs.md  non-preemptive-srs.md  preemptive-non-block-srs.md  software-tracing-srs.md  state-machine-srs.md  time-manage-srs.md
sketch/: code_sketch.md
sources/app/: app.c
sources/app/config/: app_cfg.h  core_cfg.h  pal_cfg.h
sources/app/declaration/: app_decl.h
sources/app/interface/: task_if.cpp  task_if.h
sources/app/kconfig/: core.kconfig  decl.kconfig  pal.kconfig
sources/common/container/fifo/: fifo.c  fifo.h
sources/common/container/ring_buffer/: ring_buffer.c  ring_buffer.h
sources/common/kconfiglib/: menuconfig.py
sources/common/pyspec/: appcfgpen.py  appdeclgen.py  sigdcl.py  tsknrmdcl.py  tskpoldcl.py  usrinp.py
sources/core/inc/: ciedpc_core.h  ciedpc_fsm.h  ciedpc_itnlog.h  ciedpc_msg.h  ciedpc_task.h  ciedpc_timer.h  ciedpc_tsm.h  uedp_core.h  uedp_fsm.h  uedp_itnlog.h  uedp_msg.h  uedp_ocesvc.h  uedp_task.h  uedp_timer.h  uedp_tsm.h
sources/core/src/: ciedpc_fsm.c  ciedpc_itnlog.c  ciedpc_msg.c  ciedpc_task.c  ciedpc_timer.c  ciedpc_tsm.c  uedp_fsm.c  uedp_itnlog.c  uedp_msg.c  uedp_task.c  uedp_timer.c  uedp_tsm.c
sources/pal/: pal_core.h
sources/pal/arch/esp32_s3/: esp32_s3_arch.c  esp32_s3_arch.h
sources/pal/arch/esp32_wr32/: esp32_wr32_arch.c  esp32_wr32_arch.h
sources/pal/arch/linux/: linux_arch.c  linux_arch.h
sources/pal/arch/stm32_f103/: stm32_f103_arch.c  stm32_f103_arch.h
sources/pal/arch/stm32_h723/: stm32_h723_arch.c  stm32_h723_arch.h
sources/pal/service/log/: pal_log.h
sources/pal/service/logdp/: pal_logdp.c  pal_logdp.h
sources/pal/service/memrp/: pal_memrp.c  pal_memrp.h
sources/pal/service/rprintf/: pal_rprintf.c  pal_rprintf.h
sources/test/test01/: CMakeLists.txt  test.c  test.h
sources/test/test02/: CMakeLists.txt  test.c  test.h
sources/test/test03/: CMakeLists.txt  test.c  test.h
